fixed background covering

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,8 +1,9 @@
 .bgContainer {
+  position: fixed;
   background-image: url("./boardBG.jpeg");
   background-repeat: repeat;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 .container {
